--- a/app/views/daily_records/index.haml
+++ b/app/views/daily_records/index.haml
@@ -30,4 +30,4 @@
           %th Notes
           %th
       %tbody
-        = render @daily_records.decorate
+        = render DailyRecordDecorator.decorate_collection(@daily_records.sort.reverse)
