--- a/app/views/line_items/partials/_line_item.haml
+++ b/app/views/line_items/partials/_line_item.haml
@@ -1,5 +1,5 @@
 %tr
-	%td= line_item.notes
+	%td= line_item.description
 	%td= number_with_precision(line_item.amount, :precision => 2)
 	%td
 		=link_to 'Edit', [:edit, line_item]
