fix edit for line item

--- a/app/views/line_items/partials/_line_item.haml
+++ b/app/views/line_items/partials/_line_item.haml
@@ -1,8 +1,8 @@
-%tr
+%tr{:id => "line-item-#{line_item.id}"}
 	%td= line_item.description
 	%td= number_with_precision(line_item.amount, :precision => 2)
 	%td
-		=link_to 'Edit', [:edit, line_item]
+		=link_to 'Edit', [:edit, line_item], :remote => true
 		=link_to 'Delete', line_item,
-			:date => {:method => :delete,
+			:data => {:method => :delete,
 				:confirm => 'Delete this record?'}
