--- a/app/views/daily_records/partials/_list.haml
+++ b/app/views/daily_records/partials/_list.haml
@@ -1,7 +1,12 @@
+-#
+-# locals:
+-#   cutoff
+-#
+
 .col-md-10
 	.pull-right
 		=link_to 'New Daily Transaction',
-			[:new, @cutoff, :daily_record],
+			[:new, cutoff, :daily_record],
 			:class => 'btn btn-primary'
 
 	.clearfix
