--- a/app/views/line_items/partials/_line_item.haml
+++ b/app/views/line_items/partials/_line_item.haml
@@ -1,3 +1,8 @@
+-#
+-# locals:
+-#   line_item
+-#
+
 %tr{:id => "line-item-#{line_item.id}"}
 	%td= line_item.description
 	%td= number_with_precision(line_item.amount, :precision => 2)
