--- a/app/views/line_items/partials/_new_form.haml
+++ b/app/views/line_items/partials/_new_form.haml
@@ -1,3 +1,9 @@
+-#
+-# locals:
+-#   daily_record
+-#   line_item
+-#
+
 =form_for [daily_record, line_item], :remote => true,
   :html => { :class => 'form-horizontal' } do |f|
 
