--- a/app/views/shared/_modal.haml
+++ b/app/views/shared/_modal.haml
@@ -2,6 +2,7 @@
   .modal-dialog
     .modal-content
       .modal-header
-        = link_to 'x', '#', :class => 'close', :data => { :dismiss => 'modal' }
+        =link_to 'x', '#', :class => 'close',
+        	:data => {:dismiss => 'modal'}
         %h3.modal-title#js-modal-title
       #js-modal-container
