--- a/app/views/shared/_user.haml
+++ b/app/views/shared/_user.haml
@@ -1,12 +1,13 @@
-- if user_signed_in?
+-if user_signed_in?
   %header.navbar.navbar-static-top.navbar-inverse
     .container
       .navbar-header
-        = link_to 'Finance Tracker', root_path,
+        =link_to 'Finance Tracker', root_path,
           :class => 'navbar-brand'
       .navbar-collapse
         %ul.nav.navbar-nav.navbar-right
           %li.navbar-text
-            = "Welcome #{current_user.email}!"
+            ="Welcome #{current_user.email}!"
           %li
-            = link_to 'Log out', destroy_user_session_path, :method => :delete
+            =link_to 'Log out', destroy_user_session_path,
+              :method => :delete
