add categories and admin

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,7 +8,7 @@
 
   %body
 
-    =render :partial => 'shared/user'
+    =render :partial => 'shared/nav'
 
     .container
       =render :partial => 'shared/modal'
