--- a/app/views/shared/_nav.haml
+++ b/app/views/shared/_nav.haml
@@ -12,8 +12,13 @@
             %li
               =link_to 'Users', [:admin, :users]
         %ul.nav.navbar-nav.navbar-right
-          %li.navbar-text
-            ="Welcome #{current_user.email}!"
-          %li
-            =link_to 'Log out', destroy_user_session_path,
-              :method => :delete
+          %li.dropdown
+            =link_to "#{current_user}<b class='caret'></b>".html_safe, '#',
+              :class => 'dropdown-toggle',
+              :data => {:toggle => 'dropdown'}
+            %ul.dropdown-menu
+              %li= link_to 'My Account',
+                [:edit, current_user]
+              %li= link_to 'Log out',
+                destroy_user_session_path,
+                :method => :delete
