--- a/app/views/categories/index.haml
+++ b/app/views/categories/index.haml
@@ -10,7 +10,7 @@
 	.clearfix
 
 .row
-	%table.table-table-striped.table-hover.table-condensed
+	%table.table.table-striped.table-hover.table-condensed
 		%thead
 			%tr
 				%th Label
@@ -21,6 +21,6 @@
 					%td= category
 					%td
 						=link_to 'Edit', [:edit, category]
-						=link_to 'Delete', daily_record,
+						=link_to 'Delete', category,
 							:data => {:method => :delete,
 								:confirm => 'Delete this record?'}
