finalize updating account

--- a/app/views/daily_records/show.haml
+++ b/app/views/daily_records/show.haml
@@ -19,7 +19,7 @@
 			:class => 'btn btn-success'
 		=link_to 'Delete', @daily_record,
 			:class => 'btn btn-danger',
-			:date => {:method => :delete,
+			:data => {:method => :delete,
 				:confirm => 'Delete this record?'}
 
 	.clearfix
