Refactor views and several controllers

--- a/app/views/daily_records/partials/_expenses.haml
+++ b/app/views/daily_records/partials/_expenses.haml
@@ -3,4 +3,4 @@
 -#   daily_record
 -#
 
-=number_with_precision(daily_record.expenses, :precision => 2)
+= number_with_precision daily_record.expenses, :precision => 2
