--- a/app/views/cutoffs/partials/_archive.haml
+++ b/app/views/cutoffs/partials/_archive.haml
@@ -6,16 +6,17 @@
 
 .col-md-2
 	.panel-group#accordion
-		-cutoffs.year_list.each do |year|
+		- cutoffs.year_list.each do |year|
+			- id = "year-#{year}"
 			.panel.panel-default
 				.panel-heading
 					.panel-title
-						=link_to year.to_i, "#year-#{year}",
+						= link_to year.to_i, "##{id}",
 							:data => {:toggle => 'collapse', :parent => '#accordion'}
-				.panel-collapse.collapse{:id => "year-#{year}",
-					:class => "#{'in' if year.to_i == selected_cutoff.date_from.year}"}
+				.panel-collapse.collapse{:id => id,
+					:class => "#{'in' if year == selected_cutoff.date_from.year}"}
 					.panel-body
 						%ul.list-unstyled
-							-cutoffs.list_by_year(year).latest.each do |cutoff|
+							- cutoffs.list_by_year(year).latest.each do |cutoff|
 								%li= link_to cutoff, cutoff,
 									:class => "#{'text-success' if cutoff == selected_cutoff}"
