--- a/app/views/cutoffs/show.haml
+++ b/app/views/cutoffs/show.haml
@@ -13,21 +13,18 @@
 			%dd= @cutoff.notes
 
 	.pull-right
-		=link_to 'Edit Cutoff', [:edit, @cutoff],
-			:class => 'btn btn-success'
-		=link_to 'Delete', @cutoff,
+		= link_to 'Edit Cutoff', [:edit, @cutoff], :class => 'btn btn-success'
+		= link_to 'Delete', @cutoff,
 			:class => 'btn btn-danger',
 			:data => {:method => :delete,
 				:confirm => 'Delete this record?'}
-		=link_to 'New Cutoff', new_cutoff_path,
-			:class => 'btn btn-primary'
+		= link_to 'New Cutoff', new_cutoff_path, :class => 'btn btn-primary'
 
 	.clearfix
 
 .row
-	=render :partial => 'cutoffs/partials/archive',
-		:locals => {:cutoffs => @cutoffs_list,
-			:selected_cutoff => @cutoff}
+	= render :partial => 'cutoffs/partials/archive',
+		:locals => {:cutoffs => @user_cutoffs, :selected_cutoff => @cutoff}
 
-	=render :partial => 'daily_records/partials/list',
+	= render :partial => 'daily_records/partials/list',
 		:locals => {:cutoff => @cutoff}
