--- a/app/views/admin/users/edit.haml
+++ b/app/views/admin/users/edit.haml
@@ -1,5 +1,5 @@
 .page-header
-  %h2= "Edit User #{@user}"
+  %h2 Edit User #{@user}
 
-=render :partial => 'admin/users/partials/form',
+= render :partial => 'admin/users/partials/form',
   :locals => {:user => @user}
