Implement Cutoff Form.

--- a/app/views/cutoffs/edit.haml
+++ b/app/views/cutoffs/edit.haml
@@ -2,4 +2,4 @@
 	%h2 Edit Cutoff
 	%h4 Date Period: #{@cutoff.header}
 
-= render :partial => 'cutoffs/partials/form', :locals => {:cutoff => @cutoff}
+= render :partial => 'cutoffs/partials/form', :locals => {:form => @form}
