--- a/app/views/cutoffs/new.haml
+++ b/app/views/cutoffs/new.haml
@@ -1,4 +1,4 @@
 .page-header
 	%h2 New Cutoff
 
-= render :partial => 'cutoffs/partials/form', :locals => {:cutoff => @cutoff}
+= render :partial => 'cutoffs/partials/form', :locals => {:form => @form}
