--- a/app/views/cutoffs/partials/_form.haml
+++ b/app/views/cutoffs/partials/_form.haml
@@ -3,16 +3,18 @@
 -#   cutoff
 -#
 
-= form_for cutoff, :html => {:class => 'form-horizontal'} do |f|
+= form_for form, :html => {:class => 'form-horizontal'} do |f|
 	.form-group
 		= f.label :date_from, :class => 'control-label col-sm-2'
 		.col-sm-2
-			= f.date_field :date_from, :class => 'form-control'
+			= f.date_field :date_from,
+				:class => 'form-control'
 
 	.form-group
 		= f.label :date_to, :class => 'control-label col-sm-2'
 		.col-sm-2
-			= f.date_field :date_to, :class => 'form-control'
+			= f.date_field :date_to,
+				:class => 'form-control'
 
 	.form-group
 		= f.label :budget, :class => 'control-label col-sm-2'
