--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,15 +2,15 @@
 %html
   %head
     %title FinanceTracker
-    =stylesheet_link_tag "application", media: "all"#, "data-turbolinks-track" => true
-    =javascript_include_tag "application"#, "data-turbolinks-track" => true
-    =csrf_meta_tags
+    = stylesheet_link_tag "application", media: "all"
+    = javascript_include_tag "application"
+    = csrf_meta_tags
 
   %body
 
-    =render :partial => 'shared/nav'
+    = render :partial => 'shared/nav'
 
     .container
-      =render :partial => 'shared/modal'
-      =render :partial => 'shared/alerts'
-      =yield
+      = render :partial => 'shared/modal'
+      = render :partial => 'shared/alerts'
+      = yield
