Add Forms for Daily Record and Line Items Adjust Controllers/Views accordingly

--- a/app/views/daily_records/edit.haml
+++ b/app/views/daily_records/edit.haml
@@ -1,8 +1,6 @@
 .page-header
 	%h2 Edit #{@daily_record}
 
-= form_for [@daily_record],
-	:html => {:class => 'form-horizontal'} do |f|
-
+= form_for @form, :html => {:class => 'form-horizontal'} do |f|
 	= render :partial => 'daily_records/partials/form',
 		:locals => {:f => f}
