--- a/app/views/line_items/edit.js.erb
+++ b/app/views/line_items/edit.js.erb
@@ -1,3 +1,3 @@
-$('#js-modal-container').html("<%= j(render :partial => '/line_items/partials/edit_form', :locals => {:line_item => @line_item, :daily_record => @line_item.daily_record}) %>");
+$('#js-modal-container').html("<%= j(render :partial => '/line_items/partials/edit_form', :locals => {:form => @form, :line_item => @line_item, :daily_record => @line_item.daily_record}) %>");
 $('#js-modal-title').html("Edit Line Item");
 $('#js-modal').modal('show');
