--- a/app/views/line_items/partials/_new_form.haml
+++ b/app/views/line_items/partials/_new_form.haml
@@ -4,7 +4,7 @@
 -#   line_item
 -#
 
-= form_for [daily_record, line_item], :remote => true,
+= form_for form, :url => [daily_record, line_item], :remote => true,
   :html => { :class => 'form-horizontal' } do |f|
 
   = render :partial => '/line_items/partials/form',
