--- a/app/views/admin/users/new.haml
+++ b/app/views/admin/users/new.haml
@@ -1,5 +1,11 @@
-.page-header
-  %h2 New User
+.mdl-grid
+  .mdl-cell.mdl-cell--4-col
+  .mdl-cell.mdl-cell--4-col
+    .mdl-grid.mdl-grid--no-spacing
+      .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--12-col
+        .mdl-card__title
+          .mdl-card__title-text
+            .mdl-typography--display-1 New User
 
-= render :partial => 'admin/users/partials/form',
-  :locals => {:user => @user}
+        = render :partial => 'admin/users/partials/form',
+          :locals => {:user => @user}
