--- a/app/views/cutoffs/edit.haml
+++ b/app/views/cutoffs/edit.haml
@@ -1,5 +1,14 @@
-.page-header
-  %h2 Edit Cutoff
-  %h4 Date Period: #{@cutoff.header}
+.mdl-grid
+  .mdl-cell.mdl-cell--3-col
+  .mdl-cell.mdl-cell--6-col
+    .mdl-grid.mdl-grid--no-spacing
+      .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--12-col
+        .mdl-card__title
+          .mdl-card__title-text
+            .mdl-typography--display-1
+              Edit Cutoff
+              %br
+              #{@cutoff.header}
 
-= render :partial => 'cutoffs/partials/form', :locals => {:form => @form}
+        = render :partial => 'cutoffs/partials/form',
+          :locals => {:form => @form}
