--- a/app/views/cutoffs/new.haml
+++ b/app/views/cutoffs/new.haml
@@ -1,4 +1,11 @@
-.page-header
-  %h2 New Cutoff
+.mdl-grid
+  .mdl-cell.mdl-cell--3-col
+  .mdl-cell.mdl-cell--6-col
+    .mdl-grid.mdl-grid--no-spacing
+      .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--12-col
+        .mdl-card__title
+          .mdl-card__title-text
+            .mdl-typography--display-1 New Cutoff
 
-= render :partial => 'cutoffs/partials/form', :locals => {:form => @form}
+        = render :partial => 'cutoffs/partials/form',
+          :locals => {:form => @form}
