--- a/app/views/daily_records/partials/_form.haml
+++ b/app/views/daily_records/partials/_form.haml
@@ -1,27 +1,28 @@
 -#
 -# locals:
+-#   cutoff
 -#   f
 -#
 
-.form-group
-  = f.label :transaction_date, :class => 'control-label col-sm-2'
-  .col-sm-2
-    = f.date_field :transaction_date, :class => 'form-control'
+.mdl-card__supporting-text
+  = f.label :transaction_date
+  .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width
+    = f.date_field :transaction_date, :class => 'mdl-textfield__input'
+    %label.mdl-textfield__label{:for => :transaction_date}
 
-.form-group
-  = f.label :budget, :class => 'control-label col-sm-2'
-  .col-sm-2
-    = f.text_field :budget, :class => 'form-control text-right'
+  .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
+    = f.text_field :budget,
+        :class => 'mdl-textfield__input',
+        :pattern => '-?[0-9]*(\.[0-9]+)?'
+    = f.label :budget, :class => 'mdl-textfield__label'
+    %span.mdl-textfield__error Input is not a number
 
-.form-group
-  = f.label :notes, :class => 'control-label col-sm-2'
-  .col-sm-5
-    = f.text_area :notes, :class => 'form-control', :rows => 5
+  .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
+    = f.text_area :notes,
+      :class => 'mdl-textfield__input',
+      :rows => 5
+    = f.label :notes, :class => 'mdl-textfield__label'
 
-
-%hr
-
-.form-group
-  .col-sm-offset-2.col-sm-4
-    = f.submit 'Save', :class => 'btn btn-primary'
-    = link_to 'Cancel', root_path, :class => 'btn btn-default'
+.mdl-card__actions.mdl-card--border
+  = icon_submit_button
+  = icon_cancel_button cutoff
