--- a/app/views/line_items/edit.haml
+++ b/app/views/line_items/edit.haml
@@ -5,8 +5,8 @@
       .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--12-col
         .mdl-card__title
           .mdl-card__title-text
-            .mdl-typography--display-1 Edit Record
+            .mdl-typography--display-1 Edit Line Item
 
         = form_for @form do |f|
-          = render :partial => 'daily_records/partials/form',
-            :locals => {:f => f, :cutoff => @daily_record.cutoff}
+          = render :partial => '/line_items/partials/form',
+            :locals => {:f => f, :daily_record => @line_item.daily_record}
