--- a/app/views/line_items/partials/_form.haml
+++ b/app/views/line_items/partials/_form.haml
@@ -1,20 +1,23 @@
 -#
 -# locals:
+-#   daily_record
 -#   f
 -#
 
-.modal-body
-  .form-group
-    = f.label :description, :class => 'control-label col-sm-3'
-    .col-sm-8
-      = f.text_area :description, :rows => 5,
-        :class => 'form-control'
-  .form-group
-    = f.label :amount, :class => 'control-label col-sm-3'
-    .col-sm-8
-      = f.text_field :amount, :class => 'form-control'
+.mdl-card__supporting-text
+  .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
+    = f.text_field :amount,
+        :class => 'mdl-textfield__input',
+        :pattern => '-?[0-9]*(\.[0-9]+)?'
+    = f.label :amount, :class => 'mdl-textfield__label'
+    %span.mdl-textfield__error Input is not a number
 
-.modal-footer
-  = f.submit 'Save', :class => 'btn btn-primary'
-  = link_to 'Close', '#', :class => 'btn btn-default',
-    :data => {:dismiss => 'modal'}
+  .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
+    = f.text_area :description,
+      :class => 'mdl-textfield__input',
+      :rows => 5
+    = f.label :description, :class => 'mdl-textfield__label'
+
+.mdl-card__actions.mdl-card--border
+  = icon_submit_button
+  = icon_cancel_button daily_record
