--- a/app/views/users/edit.haml
+++ b/app/views/users/edit.haml
@@ -1,34 +1,37 @@
-=form_for @user, :html => {:class => 'form-horizontal'} do |f|
-  .form-group
-    =f.label :name, :class => 'control-label col-sm-2'
-    .col-sm-3
-      =f.text_field :name, :class => 'form-control',
-        :placeholder => 'Name'
+.mdl-grid
+  .mdl-cell.mdl-cell--2-col
+  .mdl-cell.mdl-cell--8-col
+    .mdl-grid.mdl-grid--no-spacing
+      .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--12-col
+        = form_for @user do |f|
+          .mdl-card__supporting-text
+            .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
+              = f.text_field :name,
+                :class => 'mdl-textfield__input',
+                :autofocus => true
+              = f.label :name, :class => 'mdl-textfield__label'
 
-  .form-group
-    =f.label :current_password, 'Current Password',
-      :class => 'control-label col-sm-2'
-    .col-sm-3
-      =f.password_field :current_password, :class => 'form-control',
-        :placeholder => 'Old Password'
+            .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
+              = f.password_field :current_password,
+                :class => 'mdl-textfield__input'
+              = f.label :current_password, 'Current Password',
+                :class => 'mdl-textfield__label'
 
-  .form-group
-    =f.label :password, 'New Password',
-      :class => 'control-label col-sm-2'
-    .col-sm-3
-      =f.password_field :password, :class => 'form-control',
-        :placeholder => 'New Password'
+            .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
+              = f.password_field :password,
+                :class => 'mdl-textfield__input'
+              = f.label :password, 'New Password',
+                :class => 'mdl-textfield__label'
 
-  .form-group
-    =f.label :password_confirmation, 'Re-type Password',
-      :class => 'control-label col-sm-2'
-    .col-sm-3
-      =f.password_field :password_confirmation, :class => 'form-control',
-        :placeholder => 'Re-type Password'
+            .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
+              = f.password_field :password_confirmation,
+                :class => 'mdl-textfield__input'
+              = f.label :password_confirmation, 'Re-type Password',
+                :class => 'mdl-textfield__label'
 
-  %hr
-
-  .form-group
-    .col-sm-offset-2.col-sm-4
-      =f.submit 'Save', :class => 'btn btn-primary'
-      =link_to 'Cancel', root_path, :class => 'btn btn-default'
+          .mdl-card__actions.mdl-card--border
+            = button_tag :type => :submit,
+              :class => 'mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab' do
+              = icon('check')
+            = link_to icon('arrow_back'), [:root],
+              :class => 'mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab'
