Change color scheme

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,6 @@
  *
  *= require_self
  *= require plugin/__mdl_icons
- *= require plugin/material
+ *= require plugin/material.min
  *= require_tree .
  */
