--- a/app/views/line_items/partials/_list.haml
+++ b/app/views/line_items/partials/_list.haml
@@ -1,18 +1,16 @@
 -#
 -# locals:
--#   line_items
+-#   daily_record
 -#
 
-.mdl-grid
-  .mdl-cell.mdl-cell--2-col
-  .mdl-cell.mdl-cell--8-col
-    .mdl-grid.mdl-grid--no-spacing
-      %table.mdl-data-table.mdl-js-data-table.mdl-shadow--2dp.mdl-cell.mdl-cell--12-col
-        %thead
-          %tr
-            %th.mdl-data-table__cell--non-numeric Description
-            %th Amount
-            %th.mdl-data-table__cell--non-numeric
-        %tbody
-          = render :partial => 'line_items/partials/line_item',
-            :collection => line_items
+.mdl-grid.mdl-grid--no-spacing
+  .mdl-cell.mdl-cell--12-col
+    %table.mdl-data-table.mdl-js-data-table.mdl-shadow--2dp.mdl-cell.mdl-cell--12-col.unmargined-cell
+      %thead.mdl-color--orange-50
+        %tr
+          %th.mdl-data-table__cell--non-numeric Description
+          %th Amount
+          %th.mdl-data-table__cell--non-numeric
+      %tbody
+        = render :partial => 'line_items/partials/line_item',
+          :collection => daily_record.line_items.scoped
