--- a/app/assets/stylesheets/components.css.scss
+++ b/app/assets/stylesheets/components.css.scss
@@ -14,12 +14,13 @@ a.undecorated-link {
   min-height: 100px;
 }
 
-.archive-header {
-  .mdl-navigation {
-    .mdl-navigation__link {
-      &:hover {
-        background-color: #00838f;
-      }
-    }
-  }
+.unmargined-cell {
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
+}
+
+.margined-top {
+  margin-top: 8px !important;
 }
