--- a/app/views/admin/users/index.haml
+++ b/app/views/admin/users/index.haml
@@ -3,7 +3,7 @@
   .mdl-cell.mdl-cell--8-col
     .mdl-grid.mdl-grid--no-spacing
       .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--12-col.mini-card
-        .mdl-card__title
+        .mdl-card__title.mdl-color--orange-50
           .mdl-card__title-text
             .mdl-typography--display-1 Users
         .mdl-card__actions.mdl-card--border
@@ -15,7 +15,7 @@
   .mdl-cell.mdl-cell--8-col
     .mdl-grid.mdl-grid--no-spacing
       %table.mdl-data-table.mdl-js-data-table.mdl-shadow--2dp.mdl-cell.mdl-cell--12-col
-        %thead
+        %thead.mdl-color--orange-50
           %tr
             %th.mdl-data-table__cell--non-numeric Name
             %th.mdl-data-table__cell--non-numeric Email
