--- a/app/views/cutoffs/partials/_form.haml
+++ b/app/views/cutoffs/partials/_form.haml
@@ -1,40 +1,41 @@
 -#
 -# locals:
+-#   f
 -#   form
 -#
 
-= form_for form do |f|
-  .mdl-card__supporting-text
-    = f.label :date_from
-    .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width
-      = f.date_field :date_from, :class => 'mdl-textfield__input'
-      %label.mdl-textfield__label{:for => :date_from}
+.mdl-card__supporting-text
+  = f.label :date_from
+  .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width
+    = f.date_field :date_from, :class => 'mdl-textfield__input'
+    %label.mdl-textfield__label{:for => :date_from}
 
-    = f.label :date_to
-    .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width
-      = f.date_field :date_to, :class => 'mdl-textfield__input'
-      %label.mdl-textfield__label{:for => :date_to}
+  = f.label :date_to
+  .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width
+    = f.date_field :date_to, :class => 'mdl-textfield__input'
+    %label.mdl-textfield__label{:for => :date_to}
 
-    .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
-      = f.text_field :budget,
-        :class => 'mdl-textfield__input',
-        :pattern => '-?[0-9]*(\.[0-9]+)?'
-      = f.label :budget, :class => 'mdl-textfield__label'
-      %span.mdl-textfield__error Input is not a number
+  .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
+    = f.text_field :budget,
+      :class => 'mdl-textfield__input',
+      :pattern => '-?[0-9]*(\.[0-9]+)?'
+    = f.label :budget, :class => 'mdl-textfield__label'
+    %span.mdl-textfield__error Input is not a number
 
-    .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
-      = f.text_field :savings,
-        :class => 'mdl-textfield__input',
-        :pattern => '-?[0-9]*(\.[0-9]+)?'
-      = f.label :savings, :class => 'mdl-textfield__label'
-      %span.mdl-textfield__error Input is not a number
+  .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
+    = f.text_field :savings,
+      :class => 'mdl-textfield__input',
+      :pattern => '-?[0-9]*(\.[0-9]+)?'
+    = f.label :savings, :class => 'mdl-textfield__label'
+    %span.mdl-textfield__error Input is not a number
 
-    .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
-      = f.text_area :notes,
-        :class => 'mdl-textfield__input',
-        :rows => 5
-      = f.label :notes, :class => 'mdl-textfield__label'
+  .mdl-textfield.mdl-js-textfield.mdl-textfield--full-width.mdl-textfield--floating-label
+    = f.text_area :notes,
+      :class => 'mdl-textfield__input',
+      :rows => 5
+    = f.label :notes, :class => 'mdl-textfield__label'
 
-  .mdl-card__actions.mdl-card--border
-    = icon_submit_button
-    = icon_cancel_button [:root]
+.mdl-card__actions.mdl-card--border
+  = icon_submit_button
+  - if form.persisted?
+    = icon_cancel_button form.model
