--- a/app/views/daily_records/edit.haml
+++ b/app/views/daily_records/edit.haml
@@ -3,10 +3,10 @@
   .mdl-cell.mdl-cell--6-col
     .mdl-grid.mdl-grid--no-spacing
       .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--12-col
-        .mdl-card__title
+        .mdl-card__title.mdl-color--orange-50
           .mdl-card__title-text
             .mdl-typography--display-1 Edit Record
 
         = form_for @form do |f|
           = render :partial => 'daily_records/partials/form',
-            :locals => {:f => f, :cutoff => @daily_record.cutoff}
+            :locals => {:f => f, :form => @form}
