--- a/app/views/daily_records/partials/_form.haml
+++ b/app/views/daily_records/partials/_form.haml
@@ -1,6 +1,6 @@
 -#
 -# locals:
--#   cutoff
+-#   form
 -#   f
 -#
 
@@ -25,4 +25,5 @@
 
 .mdl-card__actions.mdl-card--border
   = icon_submit_button
-  = icon_cancel_button cutoff
+  - if form.persisted?
+    = icon_cancel_button form.model.cutoff
