--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,14 +7,9 @@
     = csrf_meta_tags
 
   %body
-    - layout_class = ['mdl-layout', 'mdl-js-layout', 'mdl-layout--fixed-header']
-    - layout_class << 'mdl-layout--fixed-drawer' if user_signed_in?
-    %div{:class => layout_class.join(' ')}
+    .mdl-layout.mdl-js-layout.mdl-layout--fixed-header
       = render :partial => 'shared/nav'
-      = render :partial => 'cutoffs/partials/archive',
-        :locals => {:cutoffs => @user_cutoffs, :selected_cutoff => @cutoff}
 
       .mdl-layout__content
-        =# render :partial => 'shared/modal'
         = render :partial => 'shared/alerts'
         = yield
